/*
  Copyright (c) 2025

  Description:
    Internal interaction contract
    
  Owner: 
    dev team
*/

syntax = "proto3";
package api.tips.custom_enums.v1;
option csharp_namespace = "ApiTips.CustomEnums.V1";

/*
 * Статусы операций
 *  http status codes 
 *    https://developer.mozilla.org/en-US/docs/Web/HTTP/Status
 *  gRPC status codes
 *    https://grpc.github.io/grpc/core/md_doc_statuscodes.html
 */
enum OperationStatus {
  /*
   *  Дефолтный (неопределенный) статус операции
   */
  OPERATION_STATUS_UNSPECIFIED = 0;

  /*
   *  Статус операции сигнализирующий о корректом завершении операции
   *  http analog status code: 200
   *  gRPC analog status code: 1
   */
  OPERATION_STATUS_OK = 1;

  /*
   *  Статус операции сигнализирующий о не корректом завершении операции
   *  http analog status code: 400
   *  gRPC analog status code: 8,9,11
   */
  OPERATION_STATUS_ERROR = 2;

  /*
   *  Статус операции сигнализирующий о недостаточном наборе прав для его вызова
   *  http analog status code: 403
   *  gRPC analog status code: 7
   */
  OPERATION_STATUS_NOT_PERMITTED = 3;

  /*
   *  Статус операции сигнализирующий о том что операция продублирована
   *  http analog status code: 409
   *  gRPC analog status code: 6
   */
  OPERATION_STATUS_DUPLICATE = 4;

  /*
   *  Статус операции сигнализирующий о не корректой обработке со стороны сервера
   *  http analog status code: 500
   *  gRPC analog status code: 13,14,15
   */
  OPERATION_STATUS_SERVER_ERROR = 5;

  /*
   *  Статус операции сигнализирующий о том, что данных по запросу не обнаружено
   *  http analog status code: 204
   *  gRPC analog status code: 5
   */
  OPERATION_STATUS_NO_DATA = 6;

  /*
   *  Статус операции сигнализирующий о том, что при текущих условиях операцию выполнить нельзя
   */
  OPERATION_STATUS_DECLINED = 7;

  /*
   *  Статус операции - заблокировано
   */
  OPERATION_STATUS_LOCKED = 8;
}

enum OrderStatus {
  /*
   *  Дефолтный (неопределенный) статус заказа
   */
  ORDER_STATUS_UNSPECIFIED = 0;

  /*
   *  Cтатус заказа "Создан", присваивается после создания заказа
   */
  ORDER_STATUS_CREATED = 1;

  /*
   *  Cтатус заказа "Оплачен", присваивается после оплаты заказа (устанавливается вручную менеджером)
   */
  ORDER_STATUS_PAID = 2;

  /*
   *  Cтатус заказа "Отменён", присваивается после отмены заказа пользователем или менеджером
   */
  ORDER_STATUS_CANCELLED = 3;
}

enum PaymentType {
  /*
   *  Дефолтный (неопределенный) статус оплаты
   */
  PAYMENT_TYPE_UNSPECIFIED = 0;

  /*
   *  Cтатус счета "Создан", присваивается после создания счёта
   */
  PAYMENT_TYPE_CRYPTO = 1;

  /*
   *  Cтатус счета "Оплачен", присваивается после оплаты счёта (устанавливается вручную менеджером)
   */
  PAYMENT_TYPE_BANK = 2;
}

enum BalanceOperationType {
  /*
   *  Дефолтный (неопределенный) тип операции
   */
  BALANCE_OPERATION_TYPE_UNSPECIFIED = 0;

  /*
   *  Пополнение подсказок на балансе (покупка)
   */
  BALANCE_OPERATION_TYPE_CREDITING = 1;

  /*
   *  Списание подсказок с баланса
   */
  BALANCE_OPERATION_TYPE_DEBITING = 2;
}

/*
 *  Статус счета
 */
enum InvoiceStatus {
  /*
   *  Дефолтный (неопределенный) статус счета
   */
  INVOICE_STATUS_UNSPECIFIED = 0;

  /*
   *  Статус Счета "Создан", присваивается после создания заказа
   */
  INVOICE_STATUS_CREATED = 1;

  /*
   *  Статус Счета "Оплачен", присваивается после оплаты счета (устанавливается вручную менеджером)
   */
  INVOICE_STATUS_PAID = 2;

  /*
   *  Статус заказа "Отменён", присваивается после отмены счета
   */
  INVOICE_STATUS_CANCELLED = 3;
}